# LeafLeaf

./: .gitignore  LICENSE  Main.py  pyproject.toml
src/external_sources/: CloudStorage.py  GoogleDrive.py
src/interface/: Main.py
